# ct-simulator

./: .gitignore  CMakeLists.txt  Fl_Bound_Input.h  Fl_Bound_Input.hpp  Fl_Geoplot.h  Fl_GreyImage.cpp  Fl_GreyImage.h  Fl_GridImage.cpp  Fl_GridImage.h  Fl_GridImage_Adjust.cpp  Fl_GridImage_Adjust.h  Fl_Lineplot.h  Fl_OwnValuator.h  Fl_OwnValuator.hpp  Fl_Plot.h  Fl_Selector.cpp  Fl_Selector.h  Fl_plots.h  Fl_plots.hpp  Klassendiagram.cd  Own_Valuator.h  Own_Valuator.hpp  README.md  backprojection.cpp  backprojection.h  backprojectionFilter.cpp  backprojectionFilter.h  cSysTree.cpp  cSysTree.fwd.h  cSysTree.h  callbackFunction.h  callbackFunction.hpp  cartesian.cpp  cartesian.fwd.h  cartesian.h  colorImage.cpp  colorImage.h  confirmButton.h  coordinateSystem.cpp  coordinateSystem.fwd.h  (+384 more)
binaries/: ct-simulator-x64-unix
lib/: fltk.lib  fltk_images.lib  fltk_imagesd.lib  fltk_png.lib  fltk_pngd.lib  fltk_z.lib  fltk_zd.lib  fltkformsd.lib  fltkgld.lib  fltkimagesd.lib  fltkjpegd.lib  fltkpngd.lib  fltkzlibd.lib
lib/include/FL/: Fl_Browser_.H  Fl_Device.H  Fl_Group.H  Fl_Widget.H  fl_draw.H  fl_utf8.h
lib/include/sciplot/: Utils.hpp  sciplot.hpp
lib/include/sciplot/specs/: AxisLabelSpecs.hpp
models/: build_model.model  debug.model  phantom 1.model  phantom 2 highres.model  phantom 2 xhighres.model  phantom 2.model  verification only water.model  verification.model
stateStorage/: storedModelChooser.chooser
